Release 25w05a (snapshot)